[gd_scene load_steps=4 format=3 uid="uid://dsc2dqlapqkwy"]

[ext_resource type="Script" uid="uid://jghecnli55w7" path="res://scripts/projectiles/fireball.gd" id="1_6lewf"]
[ext_resource type="PackedScene" uid="uid://3miicp8y7p5b" path="res://scenes/shared/multi_hitbox.tscn" id="2_kenfw"]
[ext_resource type="Texture2D" uid="uid://0w3nhhaugxkv" path="res://assets/projectiles/fireball.png" id="3_xb0jl"]

[node name="Fireball" type="Node2D"]
script = ExtResource("1_6lewf")

[node name="MultiHitbox" parent="." instance=ExtResource("2_kenfw")]
collision_mask = 6

[node name="CollisionPolygon2D" parent="MultiHitbox" index="0"]
polygon = PackedVector2Array(-2, -6, -4, -5, -5, -4, -6, -2, -6, 2, -5, 4, -4, 5, -2, 6, 2, 6, 4, 5, 5, 4, 6, 2, 6, -2, 5, -4, 4, -5, 2, -6)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_xb0jl")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="self_destruct" from="MultiHitbox" to="." method="_on_multi_hitbox_self_destruct"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]

[editable path="MultiHitbox"]
